--- a/maya-tts-stt/package.json
+++ b/maya-tts-stt/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^7.1.1",
     "@types/react-native": "^0.72.8",
     "axios": "^1.7.9",
+    "color": "^5.0.0",
     "expo": "~52.0.31",
     "expo-audio": "~0.3.4",
     "expo-av": "~15.0.2",
@@ -40,6 +41,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "js-base64": "^3.7.7",
+    "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
